--- a/templates/amazon-eks-per-account-resources.template.yaml
+++ b/templates/amazon-eks-per-account-resources.template.yaml
@@ -568,6 +568,9 @@ Resources:
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonEKS_CNI_Policy'
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly'
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonElasticFileSystemReadOnlyAccess'
+
+  #Modification: Added AmazonSSMManagedInstanceCore to node instance role policy.
+  #Allows using SSM Connect instead of ssh via bastion host
   ManagedNodeInstanceRole:
     Type: AWS::IAM::Role
     Metadata:
@@ -603,6 +606,7 @@ Resources:
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonEKS_CNI_Policy'
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly'
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonElasticFileSystemReadOnlyAccess'
+        - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore'
   CloudformationVPCRoleCreationRole:
     Type: AWS::IAM::Role
     Properties:
