--- a/templates/amazon-eks-per-account-resources.template.yaml
+++ b/templates/amazon-eks-per-account-resources.template.yaml
@@ -568,6 +568,7 @@ Resources:
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonEKS_CNI_Policy'
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly'
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonElasticFileSystemReadOnlyAccess'
+        - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore'
 
   #Modification: Added AmazonSSMManagedInstanceCore to node instance role policy.
   #Allows using SSM Connect instead of ssh via bastion host
