--- a/templates/amazon-eks-entrypoint-new-vpc.template.yaml
+++ b/templates/amazon-eks-entrypoint-new-vpc.template.yaml
@@ -657,9 +657,16 @@ Parameters:
   GitHubUser:
     Type: String
     Default: ""
-  SpinnakerIntegration:
+  EnableSpinnaker:
     Type: String
     Default: Disabled
+    AllowedValues: [ Enabled, Disabled ]
+    Description: "Deploy latest version of Spinnaker"
+  IstioIntegration:
+    Type: String
+    Default: Disabled
+    AllowedValues: [ Enabled, Disabled ]
+    Description: "Deploy latest version of Istio"
 
 Conditions:
   EnablePrometheus: !Or
@@ -689,7 +696,8 @@ Conditions:
   JenkinsEnabled: !And
     - !Equals [!Ref EnableJenkins, 'Enabled']
     - !Not [!Equals [!Ref QSS3BucketName, ""]]
-  SpinnakerEnabled: !Equals [!Ref SpinnakerIntegration, "Enabled"]
+  SpinnakerEnabled: !Equals [!Ref EnableSpinnaker, "Enabled"]
+  IstioEnabled: !Equals [!Ref IstioIntegration, "Enabled"]
 
 Mappings:
   Config:
@@ -897,6 +905,17 @@ Resources:
       Parameters:
         EksClusterName: !GetAtt EKSStack.Outputs.EKSClusterName
         GitHubUser: !Ref GitHubUser
+
+  IstioStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IstioEnabled
+    Properties:
+      TemplateURL: !Sub
+        - 'https://${QSS3BucketName}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/istio.template.yaml'
+        - S3Region: !If [ UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion ]
+      Parameters:
+        EksClusterName: !GetAtt EKSStack.Outputs.EKSClusterName
+        GatewayEnabled: Disabled
 
 Outputs:
   EKSClusterName:
