--- a/templates/jenkins.template.yaml
+++ b/templates/jenkins.template.yaml
@@ -84,24 +84,27 @@ Resources:
           # Used for label app.kubernetes.io/component
           componentName: "jenkins-controller"
           image: "jenkins/jenkins"
+          tagLabel: 2.340-jdk11
+          installPlugins: 
+            - configuration-as-code:1414.v878271fc496f #Overrides default value in values.yaml of Helm chart
           additionalPlugins:
             - aws-codecommit-jobs:0.3.0
-            - aws-java-sdk:1.11.995
-            - junit:1.52
+            - aws-java-sdk:1.12.163-315.v2b_716ec8e4df
+            - junit:1.57
             - ace-editor:1.1
-            - workflow-support:3.8
-            - pipeline-model-api:1.9.1
-            - pipeline-model-definition:1.9.1
-            - pipeline-model-extensions:1.9.1
-            - workflow-job:2.41
-            - credentials-binding:1.27
-            - aws-credentials:1.30
-            - credentials:2.5
-            - lockable-resources:2.11
-            - branch-api:2.6.5
-            - blueocean:1.24.8
+            - workflow-support:815.vd60466279fc8
+            - pipeline-model-api:1.9.2
+            - pipeline-model-definition:1.9.2
+            - pipeline-model-extensions:1.9.3
+            - workflow-job:1145.v7f2433caa07f
+            - credentials-binding:1.27.1
+            - aws-credentials:191.vcb_f183ce58b_9
+            - credentials:1111.v35a_307992395
+            - lockable-resources:2.14
+            - branch-api:2.1044.v2c007e51b_87f
+            - blueocean:1.25.3
             - scm-filter-branch-pr:0.5.1
-            - amazon-ecr:1.6
+            - amazon-ecr:1.7
           JCasC:
             configScripts:
               jenkins-casc-configs: |
