--- a/templates/amazon-eks-entrypoint-new-vpc.template.yaml
+++ b/templates/amazon-eks-entrypoint-new-vpc.template.yaml
@@ -667,6 +667,11 @@ Parameters:
     Default: Disabled
     AllowedValues: [ Enabled, Disabled ]
     Description: "Deploy latest version of Istio"
+  IstioGateway:
+    Type: String
+    Default: Disabled
+    AllowedValues: [ Enabled, Disabled ]
+    Description: "Deploy latest version of Istio gateway"
 
 Conditions:
   EnablePrometheus: !Or
@@ -915,7 +920,7 @@ Resources:
         - S3Region: !If [ UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion ]
       Parameters:
         EksClusterName: !GetAtt EKSStack.Outputs.EKSClusterName
-        GatewayEnabled: Disabled
+        GatewayEnabled: !Ref IstioGateway
 
 Outputs:
   EKSClusterName:
